--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,92 @@
     margin: 0 auto;
     
 }
-.bodyop{
-    width: 1440px;
-    height: 800px;
+.login {
+    display: flex;
+	width: 304px;
+    height: 394px;
+    position: fixed;
+	background: #fff;
+	z-index: 10000;
+	opacity: 1;	
+    border-radius: 8px;
+
+    margin: 203px 568px 203px 568px;
+    flex-direction: column;
+}
+.logintexthead{
+    color: var(--Gray-1, #333);
+    display: flex;
+    font-family: Rubick-Medium;
+    font-size: 28px;
+    margin: 36px 0 24px 0;
+    justify-content: center;
+}
+.modal_login:before {
+	content: '';
+	background: #000;
+	position: fixed; 
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	opacity: 0.7;
+	z-index: 9999;
+    justify-items: center;
+
+}
+.login_login{
+    display: flex;
+    width: 232px;
+    height: 25px;
     flex-shrink: 0;
-    opacity: 0.6;
-    background: var(--Gray-1, #333);
+    border: 0;
+    border-bottom: 1px solid #828282;
+    margin: 0 36px 24px 36px;
+    font-family: Rubick-Medium;
+}
+.login_pass{
+    display: flex;
+    width: 232px;
+    height: 25px;
+    flex-shrink: 0;
+    border: 0;
+    border-bottom: 1px solid #828282;
+    margin: 0 36px 24px 36px;
+    font-family: Rubick-Medium;
+}
+.login_login:focus,.login_pass:focus{
+    outline: none;
+}
+.login_login::placeholder,.login_pass::placeholder{
+    color: var(--Gray-1, #828282);
+    font-family: Rubick-Medium;
+    font-size: 16px;
+}
+.login_checkbox{
+    margin: 0 0 0 36px;
+    fill: var(--red, #E5261E);
+}
+.galka{
+    display: flex;
+    flex-direction: row;
+}
+.galkatext{
+    margin: 0 0 0 8px;
+    color: var(--Gray-1, #333);
+    font-family: Rubick-Medium;
+    font-size: 16px;
+}
+.login_btn{
+        width: 113px;
+        height: 38px;
+        background-color: #E5261E;
+        border-radius: 4px;
+        color: var(--red, #ffffff);
+        font-family: Rubick-Medium;
+        font-size: 16px;
+        border: 0;
+        margin: 111px 0 0 96px;
 }
 .header{
     height: 40px;
@@ -81,6 +161,9 @@
     font-family: Rubick-Medium;
     font-size: 16px;
     border: 0;
+}
+.formh{
+    display: flex;
 }
 .header_login:hover{
     background: #CC221B;
@@ -275,9 +358,6 @@ footer{
     color: var(--Gray-1, #333);
     font-family: Rubick-Medium;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
 }
 .time{
     display: flex;
@@ -292,6 +372,7 @@ footer{
     font-size: 16px;
     margin: 12px 0 -5px 0;
 }
+
 
 @media screen and (max-width: 390px){
 
@@ -388,5 +469,7 @@ footer{
     .imginf4{
         margin-right: 40px;
     }
-    
+    .login {
+        margin:0 0 0 43px;
+    }
 }
